--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
 		"dev": "sls offline start"
 	},
 	"devDependencies": {
+		"@types/aws-lambda": "^8.10.63",
 		"@types/jsonschema": "^1.1.1",
 		"@types/lodash": "^4.14.161",
 		"@types/node": "^14.11.1",
+		"@types/uuid": "^8.3.0",
 		"@typescript-eslint/eslint-plugin": "^4.1.1",
 		"@typescript-eslint/parser": "^4.1.1",
-		"copy-webpack-plugin": "^6.2.0",
+		"aws-lambda": "^1.0.6",
 		"eslint": "^7.9.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-config-standard": "^14.1.1",
-		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-import-helpers": "^1.1.0",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^3.1.4",
@@ -29,6 +31,7 @@
 		"eslint-plugin-unused-imports": "^0.1.3",
 		"husky": "^4.3.0",
 		"prettier": "^2.1.2",
+		"serverless-dynamodb-local": "^0.2.39",
 		"serverless-offline": "^6.8.0",
 		"serverless-plugin-typescript": "^1.1.9",
 		"serverless-webpack": "^5.3.5",
