delivery: http handler and create user controller

--- a/src/shared/infra/http/config/serverless/functions.yml
+++ b/src/shared/infra/http/config/serverless/functions.yml
@@ -1,10 +1,18 @@
 ping:
   handler: src/shared/infra/http/controllers/testController.ping
-  memorySize: 128
   description: Test API reachability
   events:
     - http:
         path: ping
         method: get
+        cors:
+          origin: '*'
+addUser:
+  handler: src/modules/user/controllers/CreateUserController.addUser
+  description: Add User
+  events:
+    - http:
+        path: users
+        method: post
         cors:
           origin: '*'
