refactor: Updating Dynammodb table fields in config

--- a/src/shared/infra/http/config/serverless/migration.yml
+++ b/src/shared/infra/http/config/serverless/migration.yml
@@ -1,16 +1,15 @@
 DynamoTable:
   AttributeDefinitions:
-    - AttributeName: 'entity'
+    - AttributeName: 'PK'
       AttributeType: 'S'
-    - AttributeName: 'data'
+    - AttributeName: 'SK'
       AttributeType: 'S'
   KeySchema:
-    - AttributeName: 'entity'
+    - AttributeName: 'PK'
       KeyType: HASH
-    - AttributeName: 'data'
+    - AttributeName: 'SK'
       KeyType: RANGE
   ProvisionedThroughput:
     ReadCapacityUnits: 1
     WriteCapacityUnits: 25
   TableName: ${self:custom.dynamo-table}
-  
