feature: new get user by name route

--- a/src/shared/infra/http/config/serverless/functions.yml
+++ b/src/shared/infra/http/config/serverless/functions.yml
@@ -16,3 +16,16 @@ addUser:
         method: post
         cors:
           origin: '*'
+getUser:
+  handler: src/modules/user/controllers/GetUserController.getUser
+  description: Get User
+  events:
+    - http:
+        path: users/{name}
+        method: get
+        request:
+          parameters:
+            paths:
+              name: true
+        cors:
+          origin: '*'
