--- a/src/shared/infra/http/config/serverless/migration.yml
+++ b/src/shared/infra/http/config/serverless/migration.yml
@@ -4,11 +4,27 @@ DynamoTable:
       AttributeType: 'S'
     - AttributeName: 'SK'
       AttributeType: 'S'
+    - AttributeName: 'GSI1PK'
+      AttributeType: 'S'
+    - AttributeName: 'GSI1SK'
+      AttributeType: 'S'
   KeySchema:
     - AttributeName: 'PK'
       KeyType: HASH
     - AttributeName: 'SK'
       KeyType: RANGE
+  GlobalSecondaryIndexes:
+    - IndexName: 'GSI1'
+      KeySchema:
+        - AttributeName: 'GSI1PK'
+          KeyType: HASH
+        - AttributeName: 'GSI1SK'
+          KeyType: RANGE
+      Projection:
+        ProjectionType: 'ALL'
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 25
   ProvisionedThroughput:
     ReadCapacityUnits: 1
     WriteCapacityUnits: 25
