feature: added list themes flow

--- a/src/shared/infra/http/config/serverless/functions.yml
+++ b/src/shared/infra/http/config/serverless/functions.yml
@@ -29,3 +29,12 @@ getUser:
               name: true
         cors:
           origin: '*'
+listThemes:
+  handler: src/modules/theme/controllers/ListThemesController.listThemes
+  description: List themes
+  events:
+    - http:
+        path: themes
+        method: get
+        cors:
+          origin: '*'
