feature: added get proposition and its authors flow

--- a/src/shared/infra/http/config/serverless/functions.yml
+++ b/src/shared/infra/http/config/serverless/functions.yml
@@ -64,3 +64,16 @@ listThemes:
         method: get
         cors:
           origin: '*'
+getPropositionAndListAuthors:
+  handler: src/modules/proposition/controllers/GetPropositionAndListAuthorsController.getPropositionAndListAuthors
+  description: Get PropositionAndListAuthors
+  events:
+    - http:
+        path: propositions/{id}/authors
+        method: get
+        request:
+          parameters:
+            paths:
+              id: true
+        cors:
+          origin: '*'
