--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"joi": "^17.2.1",
 		"jsonschema": "^1.2.6",
 		"lodash": "^4.17.20",
+		"node-fetch": "^2.6.1",
 		"serverless": "^2.5.0",
 		"typescript": "^4.0.3",
 		"uuid": "^8.3.1"
