refactor: sending count information and minor changes

--- a/src/shared/infra/http/config/serverless/functions.yml
+++ b/src/shared/infra/http/config/serverless/functions.yml
@@ -112,7 +112,7 @@ listRelevantPoliticiansByTheme:
         method: get
         request:
           parameters:
-            query:
+            querystrings:
               first: true
               second: true
               third: true
