--- a/src/shared/infra/http/config/serverless/migration.yml
+++ b/src/shared/infra/http/config/serverless/migration.yml
@@ -8,6 +8,10 @@ DynamoTable:
       AttributeType: 'S'
     - AttributeName: 'GSI1SK'
       AttributeType: 'S'
+    - AttributeName: 'GSI2PK'
+      AttributeType: 'S'
+    - AttributeName: 'GSI2SK'
+      AttributeType: 'S'
   KeySchema:
     - AttributeName: 'PK'
       KeyType: HASH
@@ -19,6 +23,17 @@ DynamoTable:
         - AttributeName: 'GSI1PK'
           KeyType: HASH
         - AttributeName: 'GSI1SK'
+          KeyType: RANGE
+      Projection:
+        ProjectionType: 'ALL'
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 25
+    - IndexName: 'GSI2'
+      KeySchema:
+        - AttributeName: 'GSI2PK'
+          KeyType: HASH
+        - AttributeName: 'GSI2SK'
           KeyType: RANGE
       Projection:
         ProjectionType: 'ALL'
