--- a/src/shared/infra/http/config/serverless/resources.yml
+++ b/src/shared/infra/http/config/serverless/resources.yml
@@ -12,6 +12,10 @@ Resources:
           AttributeType: 'S'
         - AttributeName: 'GSI1SK'
           AttributeType: 'S'
+        - AttributeName: 'GSI2PK'
+          AttributeType: 'S'
+        - AttributeName: 'GSI2SK'
+          AttributeType: 'S'
       KeySchema:
         - AttributeName: 'PK'
           KeyType: HASH
@@ -23,6 +27,17 @@ Resources:
             - AttributeName: 'GSI1PK'
               KeyType: HASH
             - AttributeName: 'GSI1SK'
+              KeyType: RANGE
+          Projection:
+            ProjectionType: 'ALL'
+          ProvisionedThroughput:
+            ReadCapacityUnits: 1
+            WriteCapacityUnits: 25
+        - IndexName: 'GSI2'
+          KeySchema:
+            - AttributeName: 'GSI2PK'
+              KeyType: HASH
+            - AttributeName: 'GSI2SK'
               KeyType: RANGE
           Projection:
             ProjectionType: 'ALL'
